# k3d-demo

./: Taskfile.yml  pyproject.toml
assets/: k3d-config-cluster.yaml
sample/: Dockerfile
sample/src/app/: app.py
sample/src/app/web/: controllers.py
scripts/: lifecycle.sh  prep.sh
