[tool.poetry]
name = "k3d-demo"
version = "0.1.0"
description = "Demo env for running internal python apps"
authors = ["Humphrey Drummond (ThoughtMachine) <humphrey.drummond@atombank.co.uk>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
Flask = "^3.0.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
